--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,80 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="secondary">
     <ion-title>
-      Ionic Blank
+      Bratislava APP
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+   <leaflet-map></leaflet-map>
+    <ion-grid style="position: relative; z-index: 1000;">
+      <ion-card position="bottom" style='background-color: white;'>
+          <ion-row>
+            <ion-col size-md="3" class="ion-text-center" class="ion-padding-top no-padding-bottom">
+              <ion-chip color='secondary'>
+                <ion-label><ion-icon name="heart"></ion-icon></ion-label>
+              </ion-chip>
+            </ion-col>
+            <ion-col size-md="3" class="ion-text-center" class="ion-padding-top no-padding-bottom">
+              <ion-chip color='secondary'>
+              <ion-label><ion-icon name="bicycle"></ion-icon></ion-label>
+              </ion-chip>
+            </ion-col>
+          </ion-row>
+
+        <ion-row>
+          <ion-col size-md='6' offset-md='3'>
+            <ion-item>
+              <ion-label color='secondary' position="floating">Odkiaľ</ion-label>
+              <ion-input></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-label color='secondary' position="floating">Kam</ion-label>
+              <ion-input></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+          <ion-button expand="full" color="secondary" (click)="showModal()">Vyhladat</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-card>
+
+      <ion-card style='background-color: none;'>
+      <ion-row>
+        <ion-col>
+            <ion-button color="secondary" routerLink="/bike" routerDirection="root" style="position: relative; z-index: 1000;">
+              SF bikes
+            </ion-button>
+            <ion-button color="secondary" routerLink="/bikes-map" routerDirection="root" style="position: relative; z-index: 1000;">
+              Mapa bikov
+            </ion-button>
+        </ion-col>
+      </ion-row>
+      </ion-card>
+    </ion-grid>
 </ion-content>
+<!--
+<ion-tabs style="position: fixed; z-index: 2000;">
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="map">
+      <ion-icon name="map"></ion-icon>
+      <ion-label>Mapa Bikov</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="speakers">
+      <ion-icon name="contacts"></ion-icon>
+      <ion-label>Speakers</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="map">
+      <ion-icon name="cog"></ion-icon>
+      <ion-label>Nastavenia</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
+-->
