--- a/src/app/components/leaflet-map/leaflet-map.component.html
+++ b/src/app/components/leaflet-map/leaflet-map.component.html
@@ -1,1 +1,1 @@
-<div id="mapId" style="width: 100%; height: 100%; position: absolute; z-index: 2"></div>
+<div #leafletMap style="width: 100%; height: 90%; position: absolute; z-index: 2"></div>
