--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,10 +6,10 @@
   </ion-toolbar>
 </ion-header>
 
+<leaflet-map></leaflet-map>
 <ion-content>
-   <leaflet-map></leaflet-map>
-    <ion-grid style="position: relative; z-index: 1000;">
-      <ion-card position="bottom" style='background-color: white;'>
+    <ion-grid style='background-color: none; position: fixed; left:0; right:0; bottom: 0; z-index:3;'>
+      <ion-card style='background-color: white; border: 1px solid red;'>
           <ion-row>
             <ion-col size-md="3" class="ion-text-center" class="ion-padding-top no-padding-bottom">
               <ion-chip color='secondary'>
@@ -41,10 +41,13 @@
         </ion-row>
         <ion-row>
           <ion-col>
+            <ion-fab>
+            <ion-fab-button><ion-icon name="add"></ion-icon></ion-fab-button>
+          </ion-fab>
           <ion-button expand="full" color="secondary" (click)="showModal()">Vyhladat</ion-button>
           </ion-col>
         </ion-row>
-      </ion-card>
+      </ion-card>      
 
       <ion-card style='background-color: none;'>
       <ion-row>
