Mentoring - leaflet-map component add markers on init

--- a/src/app/bikes-map/bikes-map.page.html
+++ b/src/app/bikes-map/bikes-map.page.html
@@ -7,6 +7,6 @@
  </ion-toolbar>
 </ion-header>
 
-<leaflet-map></leaflet-map>
+<leaflet-map *ngIf="bikeData" [bikeData]="bikeData"></leaflet-map>
 <ion-content>
 </ion-content>
