adding mock bus stops into the map

--- a/src/app/pages/onboarding/onboarding.page.html
+++ b/src/app/pages/onboarding/onboarding.page.html
@@ -23,13 +23,13 @@
         <h1>Mapa</h1>
         <p>Si stratený a hľadáš správnu zastávku? Alebo chceš prestúpiť na bicykel? Pomôž si našou mapkou.</p>
 
-        <ion-button (click)="onboardingDone()" style='width: 90%;'>Začať</ion-button>
+        <ion-button (click)="onboardingDone()" style='width: 100%;'>Začať</ion-button>
     </ion-slide>
   </ion-slides>
 </ion-content>
 
 <ion-footer no-border [hidden]="!pagerStatus">
   <ion-toolbar class='footerSkipLink'>
-    <ion-title><a (click)="onboardingDone()">Preskočit</a></ion-title>
+    <ion-title text-center><a (click)="onboardingDone()">Preskočit</a></ion-title>
   </ion-toolbar>
 </ion-footer>
