tabs added, tabs: favourites, lines, routes and map added

--- a/src/app/components/leaflet-map/leaflet-map.component.scss
+++ b/src/app/components/leaflet-map/leaflet-map.component.scss
@@ -1,38 +1,20 @@
 :host ::ng-deep {
-  .marker-pin {
-    width: 30px;
-    height: 30px;
-    border-radius: 50% 50% 50% 0;
-    background: #c30b82;
+
+  .count {
+    border: 0px solid red;
     position: absolute;
-    transform: rotate(-45deg);
-    left: 50%;
-    top: 50%;
-    margin: -15px 0 0 -15px;
+    background: #FFEB3B;
+    display: block;
+    font-weight: bold;
+    border-radius: 2px;
+    top: -8px;
+    left: -10px;
+    padding-left: 2px;
+    padding-right: 2px;
+  }
+  .markerIcon {
+    height: 32px;
+    widht: 32px;
   }
 
-  .marker-pin::after {
-      content: '';
-      width: 24px;
-      height: 24px;
-      margin: 3px 0 0 3px;
-      background: #fff;
-      position: absolute;
-      border-radius: 50%;
-   }
-
-  .custom-div-icon i {
-     position: absolute;
-     width: 22px;
-     font-size: 22px;
-     left: 0;
-     right: 0;
-     margin: 10px auto;
-     text-align: center;
-  }
-
-  .custom-div-icon i.awesome {
-     margin: 12px auto;
-     font-size: 17px;
-  }
 }
