--- a/src/app/pages/bikes-map/bikes-map.page.html
+++ b/src/app/pages/bikes-map/bikes-map.page.html
@@ -1,9 +1,6 @@
 <ion-header>
- <ion-toolbar color="secondary">
-   <ion-buttons slot="start">
-     <ion-back-button defaultHref="/home"></ion-back-button>
-   </ion-buttons>
-   <ion-title>Slovnaft bikes</ion-title>
+ <ion-toolbar color="baTheme">
+   <ion-title class='titleColor'>MAPA</ion-title>
  </ion-toolbar>
 </ion-header>
 
