--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,20 +1,20 @@
 <ion-tabs>
-  <ion-tab-bar id='rounded' slot="bottom">
+  <ion-tab-bar slot="bottom" id='tabStyleCustom'>
     <ion-tab-button tab="favourites">
-      <ion-icon name="heart"></ion-icon>
-      <!-- <ion-label>Tab One</ion-label> -->
+      <ion-icon name="heart" class='color'></ion-icon>
+      <ion-label>Srdcovky</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="routes">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+    <ion-tab-button tab="lines">
+      <ion-icon name="apps" class='color'></ion-icon>
+      <ion-label>Linky</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="stops">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-icon name="apps" class='color'></ion-icon>
+      <ion-label>Zastavky</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="map">
-      <ion-icon name="map"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-icon name="map" class='color'></ion-icon>
+      <ion-label>Mapa</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
