--- a/src/app/pages/favourite-tab/favourite-tab.page.html
+++ b/src/app/pages/favourite-tab/favourite-tab.page.html
@@ -1,9 +1,64 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>tabs</ion-title>
+  <ion-toolbar color='baTheme' style="height: 55px; box-shadow: 0px 3px 5px #adadad;">
+    <ion-title class='titleColor'>SRDCOVKY</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+
+  <ion-tabs >
+  <ion-tab-bar slot="top" class='tabsContentMenu'>
+    <ion-tab-button tab="schedule">
+      <ion-label>Vsetky</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="speakers">
+      <ion-label>Linky</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="map">
+      <ion-label>Zastavky</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
+
+<!--
+<ion-segment (ionChange)="segmentChanged($event)">
+  <ion-segment-button value="all" class='segmentMenu'>
+    <ion-label>Vsetky</ion-label>
+  </ion-segment-button>
+  <ion-segment-button value="lines" class='segmentMenu'>
+    <ion-label>Linky</ion-label>
+  </ion-segment-button>
+  <ion-segment-button value="stops" class='segmentMenu'>
+    <ion-label>Zastavky</ion-label>
+  </ion-segment-button>
+</ion-segment>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        Vsetky
+      </ion-col>
+      <ion-col>
+        Linky
+      </ion-col>
+      <ion-col>
+        Zastavky
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+-->
+  <ion-fab class='addFavouriteFab' vertical="bottom" horizontal="center" slot="fixed" color='baTheme'>
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="top">
+      <ion-fab-button><ion-icon name="logo-vimeo"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon name="logo-vimeo"></ion-icon></ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
 
 </ion-content>
