--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,8 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+@import "theme/_ionic";
+
 ion-toolbar {
   background-color: var(--ion-color-baTheme);
 }
