--- a/src/app/pages/bikes-map/bikes-map.page.html
+++ b/src/app/pages/bikes-map/bikes-map.page.html
@@ -1,6 +1,7 @@
 <ion-header>
  <ion-toolbar color="baTheme">
-   <ion-title class='titleColor'>MAPA</ion-title>
+   <ion-img src="./assets/icon/PNGbratislava.png" class='baIcon'></ion-img>
+   <ion-title class='titleColor'>Mapa</ion-title>
  </ion-toolbar>
 </ion-header>
 
