--- a/src/app/pages/lines-tab/lines-tab.page.html
+++ b/src/app/pages/lines-tab/lines-tab.page.html
@@ -1,40 +1,37 @@
 <ion-header>
-  <ion-toolbar color='baTheme' style="height: 55px; box-shadow: 0px 3px 5px #adadad;">
-    <ion-title class='titleColor'>LINKY</ion-title>
+  <ion-toolbar color='baTheme'>
+    <ion-img src="./assets/icon/PNGbratislava.png" class='baIcon'></ion-img>
+    <ion-title class='titleColor'>Linky</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content color="baThemeContent">
 
-  <ion-searchbar padding></ion-searchbar>
+  <ion-searchbar class="ion-padding" placeholder="Hľadat"></ion-searchbar>
 
   <ion-text>
-    <h1 padding>Zoznam liniek</h1>
+    <h2>Zoznam liniek</h2>
   </ion-text>
 
-<ion-grid no-padding fixed>
-  <ion-row class="place-row">
-    <ion-col size-xs="12" size-sm="6" size-md="6" size-lg="4" >
-
-      <ion-card button class="shadow" margin margin-bottom color="white"
-        [routerLink]="">
-        <ion-card-content no-padding>
-          <ion-grid padding style="padding-top: 0px !important;">
-            <ion-row>
+    <ion-card button class="shadow" color="white" [routerLink]="">
+        <ion-card-content class="ion-no-padding">
+          <ion-grid>
+            <ion-row class="ion-no-padding">
               <ion-col size="2">
                 <div class='lineSquereIcon'>
                   <div class='SquereIconText'>1</div>
                 </div>
               </ion-col>
-              <ion-col size="1">
-              </ion-col>
-              <ion-col size="9">
+              <ion-col size="10">
                 <div class="ion-text-nowrap">
                   <h3 class="bold">Petrzalka</h3>
                 </div>
                 <div class="multi-ellipsis">
-                  <ion-text color="medium">
-                    <p style="text-align: left;">Elektricka</p>
+
+                  <ion-text color="darkGrey">
+                  <p class="destination">
+                    <ion-icon src="./assets/icon/sipka.svg" class='destinationIcon'>
+                    </ion-icon>  Hlavná stanica</p>
                   </ion-text>
                 </div>
               </ion-col>
@@ -43,10 +40,64 @@
         </ion-card-content>
       </ion-card>
 
-      <ion-card button class="shadow" margin margin-bottom color="white"
+    <ion-card button class="shadow" color="white" [routerLink]="">
+        <ion-card-content class="ion-no-padding">
+          <ion-grid>
+            <ion-row class="ion-no-padding">
+              <ion-col size="2">
+                <div class='lineSquereIconGreen'>
+                  <div class='SquereIconText'>39</div>
+                </div>
+              </ion-col>
+              <ion-col size="10">
+                <div class="ion-text-nowrap">
+                  <h3 class="bold">Ostredky, Súhvezdná</h3>
+                </div>
+                <div class="multi-ellipsis">
+
+                  <ion-text color="darkGrey">
+                  <p class="destination">
+                    <ion-icon src="./assets/icon/sipka.svg" class='destinationIcon'>
+                    </ion-icon>  Cintorín Slávičie údolie</p>
+                  </ion-text>
+                </div>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-card-content>
+      </ion-card>
+
+    <ion-card button class="shadow" color="white" [routerLink]="">
+        <ion-card-content class="ion-no-padding">
+          <ion-grid>
+            <ion-row class="ion-no-padding">
+              <ion-col size="2">
+                <div class='lineSquereIconOrange'>
+                  <div class='SquereIconText'>80</div>
+                </div>
+              </ion-col>
+              <ion-col size="10">
+                <div class="ion-text-nowrap">
+                  <h3 class="bold">Kollárovo námestie</h3>
+                </div>
+                <div class="multi-ellipsis">
+
+                  <ion-text color="darkGrey">
+                  <p class="destination">
+                    <ion-icon src="./assets/icon/sipka.svg" class='destinationIcon'>
+                    </ion-icon>  Petržalka, Kopčany</p>
+                  </ion-text>
+                </div>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-card-content>
+      </ion-card>
+ <!--
+      <ion-card button class="shadow" color="white"
         [routerLink]="">
         <ion-card-content no-padding>
-          <ion-grid padding style="padding-top: 0px !important;">
+          <ion-grid>
             <ion-row>
               <ion-col size="2">
                 <div class='lineSquereIcon'>
@@ -71,6 +122,7 @@
       </ion-card>
     </ion-col>
   </ion-row>
-</ion-grid>
+
+-->
 
 </ion-content>
