--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom" id='tabStyleCustom'>
     <ion-tab-button tab="favourites">
-      <ion-icon name="heart" class='color'></ion-icon>
+      <ion-icon name="heart" color='baTheme'></ion-icon>
       <ion-label>Srdcovky</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="lines">
-      <ion-icon name="apps" class='color'></ion-icon>
-      <ion-label>Linky</ion-label>
+      <ion-icon name="apps" src="./assets/icon/timeline.svg" color='baTheme'></ion-icon>
+      <ion-label color='darkGrey'>Linky</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="stops">
-      <ion-icon name="apps" class='color'></ion-icon>
+      <ion-icon name="apps" color='baTheme' src="./assets/icon/bus-stop.svg"></ion-icon>
       <ion-label>Zastavky</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="map">
-      <ion-icon name="map" class='color'></ion-icon>
+      <ion-icon name="map" color='baTheme' src="./assets/icon/map-icon.svg"></ion-icon>
       <ion-label>Mapa</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
