--- a/src/app/pages/lines-tab/lines-tab.page.scss
+++ b/src/app/pages/lines-tab/lines-tab.page.scss
@@ -1,32 +1,50 @@
-#rounded {
-  background-color: #ffffff;
-  border-top: 0px;
-  border-radius: 10px;
-  box-shadow: 0px -13px 5px #adadad;
-}
-
 .lineSquereIcon {
   border-radius: 5px;
   background: #474B60;
-  padding: 20px;
-  width: 30px;
-  height: 30px;
-  border: 1.5px solid orange;
+  //padding: 20px;
+  width: 45px;
+  height: 45px;
+  border: 2.5px solid #FF6600;
+  position: relative;
+}
+
+.lineSquereIconGreen {
+  border-radius: 5px;
+  background: #474B60;
+  //padding: 20px;
+  width: 45px;
+  height: 45px;
+  border: 2.5px solid #009846;
+  position: relative;
+}
+
+.lineSquereIconOrange {
+  border-radius: 5px;
+  background: #474B60;
+  // padding: 20px;
+  width: 45px;
+  height: 45px;
+  border: 2.5px solid #F7AA47;
   position: relative;
 }
 
 .SquereIconText {
   color: white;
   position: relative;
-  top: -12px;
-  left: -5px;
-  font-size: 1.0em;
+  top: 8px;
+  left: 1px;
+  text-align: center;
+  font-size: 0.9em;
   font-weight: bold;
 }
 
 ion-grid {
-  margin-top: 20px;
-  border: 0px solid red;
+  // border: 1px solid red;
+  // --ion-padding: 90px;
+}
+
+ion-row {
+  // border: 1px solid red;
 }
 
 ion-col {
@@ -41,7 +59,4 @@ ion-col {
     background-color: #FCFCFC;
   }
 
-  .cardShadow {
-    box-shadow: 0px 5px 5px #adadad;
-  }
 }
