--- a/src/app/pages/tabs/tabs.page.scss
+++ b/src/app/pages/tabs/tabs.page.scss
@@ -1,6 +1,10 @@
 #tabStyleCustom {
   box-shadow: 0px -3px 5px #adadad;
-  height: 70px;
+  height: 55px;
+}
+
+ion-tabs {
+    --ion-color-primary: var(--ion-color-baTheme);
 }
 
 .color{
